[package]
name = "fake_headers"
version = "0.0.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/shhossain/rust-fake-headers"
homepage = "https://github.com/shhossain/rust-fake-headers"
readme = "README.md"

# Add description and author
description = "Generate fake HTTP headers for user agents"
authors = ["shhossain"]

# Add dependencies
[dependencies]
rand = "0.8"
