[package]
name = "fake_headers"
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/shhossain/rust-fake-headers"
homepage = "https://github.com/shhossain/rust-fake-headers"
readme = "README.md"

# Add description and author
description = "Generate fake HTTP headers for user agents"
authors = ["shhossain"]

# Add dependencies
[dependencies]
rand = "0.8"
