[package]
name = "fake_headers"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/shhossain/rust-fake-headers"
homepage = "https://github.com/shhossain/rust-fake-headers"
readme = "README.md"

# Add description and author
description = "Generate fake HTTP headers for your HTTP requests."
authors = ["shhossain"]

# Add dependencies
[dependencies]
rand = "0.8"
